fixed missing background image

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -74,7 +74,7 @@ h1.moussetache_header{
 	}
 }
 body{
-	background:image-asset-url("background.jpg");
+	background-image:asset-url("background.jpg");
 	background-size: cover;
 	height:100%;
 }
